--- a/src/index.css
+++ b/src/index.css
@@ -36,6 +36,12 @@ body {
   z-index: 2000;
 }
 
+.header-phone {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+}
+
 .logo {
   text-decoration: none;
   font-weight: 900;
@@ -85,31 +91,34 @@ body {
 }
 
 .Home {
-  min-height: 85vh;
+  height: 85vh;
   background-color: black;
   position: relative;
-  border: 5px solid red;
+  /* border: 5px solid red; */
 }
 
-.extra {
+/* .extra {
   position: relative;
   border: 5px solid green;
-}
+} */
 
 .profile-img {
   opacity: 0.3;
   width: 100%;
   height: 100%;
   object-fit: cover;
+  /* border: 5px solid green; */
 }
 
 .caleb-photo {
   width: 200px;
   height: 200px;
-  border-radius: 50%;
+  border-radius: 5%;
+  border: 5px solid white;
 }
 
 .profile-container {
+  /* border: 5px solid blue; */
   position: absolute;
   top: 0;
   bottom: 0;
@@ -129,6 +138,7 @@ body {
 }
 
 .profile-wrapper {
+  /* border: 5px solid yellow; */
   display: flex;
   align-items: center;
   gap: 50px;
@@ -344,6 +354,10 @@ body {
     padding: 0 15px;
   }
 
+  .header-phone {
+    font-size: 12px;
+  }
+
   .logo {
     font-size: 20px;
   }
@@ -377,6 +391,10 @@ body {
     text-align: center;
   }
 
+  .Home {
+    min-height: 100vh;
+  }
+
   .profile-container {
     padding: 0 15px;
     font-size: 12px;
@@ -394,13 +412,17 @@ body {
     order: 1;
   }
 
-  /* .profile-photo {
-    order: 0;
-  } */
+  .caleb-photo {
+    margin-top: 15px;
+    width: 150px;
+    height: 150px;
+    border: 3px solid white;
+  }
 
   .hire-me {
     font-size: 12px;
     padding: 10px 30px;
+    margin-bottom: 30px;
   }
 
   .Stack h1 {
